--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 body  {
   font-family: 'Delicious Handrawn', cursive;
   margin: 0;
-  height: 100vh;
+  height: 130vh;
   background-image: url('/images/bg.png');
   background-size:cover;
   -webkit-animation: slidein 10s;
@@ -29,6 +29,8 @@ body  {
   align-items: center;
 
   .btns {
+    position: fixed;
+    z-index: 10;
     width: 100%;
     height: 3rem;
     // background-color: #0080ff;
@@ -52,8 +54,8 @@ body  {
     z-index: 1;
   }
 
-  .barbie {
-    margin-top: 10%;
+  .babyshark {
+    margin-top: 20%;
     width: 75%;
     z-index: 2;
   }
@@ -78,15 +80,21 @@ body  {
   }
 
   .personajes {
-    // background-color: rgb(21, 255, 0);
+    // background-color: #15ff00;
     width: 100vw;
+    height: 130vw;
+    min-height: 360px;
     z-index: 3;
     overflow: hidden;
 
     .sprite {
+      // background-color: red;
       width: calc(100% * 4);
-      animation: move 1s steps(4) infinite;
       /* image-rendering: pixelated; */
+    }
+
+    .movimiento {
+      animation: move 1s steps(4) infinite;
     }
   }
 
@@ -148,7 +156,7 @@ body  {
   }
 
   .contador {
-    background-color: #e4497f;
+    background-color: #3450ef;
     position: absolute;
     width: 100%;
     top: 45%;
